--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "react-helmet": "^6.1.0"
   }
 }
